[package]
name = "cobs-rs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A minimal no-std library for doing Consistent Overhead Byte Stuffing"
version = "1.0.1"

edition = "2018"

categories = ["embedded", "no-std"]
keywords = ["cobs", "stuffing", "byte", "overhead", "embedded"]

repository = "https://github.com/coastalwhite/cobs-rs"
homepage = "https://github.com/coastalwhite/cobs-rs"

readme = "README.md"
license = "MIT"
